feature: change main flow