@@ -1,9 +1,9 @@
-package beans;
+package com.bakedata.beans;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import sun.misc.BASE64Decoder;
 
+import java.util.Base64;
 
 
 import java.io.*;
@@ -20,14 +20,14 @@ public class FileHandler {
     private int imgNum = 1;
     private boolean success = true;
 
-    public FileHandler(String filePath){
+    public FileHandler(String filePath) {
         article = new File(filePath);
-        String folderPath = filePath.replace(".md","");
-        String tmpArticlePath = filePath.replace(".md","_2.md");
+        String folderPath = filePath.replace(".md", "");
+        String tmpArticlePath = filePath.replace(".md", "_2.md");
         folder = new File(folderPath);
         newFile = !folder.exists();
-        if(newFile){
-            logger.info(String.format("create new image folder %s",folder.mkdirs()));
+        if (newFile) {
+            logger.info(String.format("create new image folder %s", folder.mkdirs()));
         }
         tmpArticle = new File(tmpArticlePath);
     }
@@ -63,28 +63,28 @@ public class FileHandler {
         BufferedReader bufferedReader = new BufferedReader(read);
 
         // create a tmpArticle writer
-        if(!tmpArticle.createNewFile()){
+        if (!tmpArticle.createNewFile()) {
             logger.error(String.format("create temp article file failed, name: %s", article.getName()));
             tmpArticle.delete();
             return;
-        };
+        }
+        ;
         OutputStreamWriter write = new OutputStreamWriter(
-                new FileOutputStream(tmpArticle),StandardCharsets.UTF_8);
+                new FileOutputStream(tmpArticle), StandardCharsets.UTF_8);
         BufferedWriter bufferedWriter = new BufferedWriter(write);
 
         String lineTxt = bufferedReader.readLine();
-        if(lineTxt==null || !lineTxt.contains("tags")){
+        if (lineTxt == null || !lineTxt.contains("tags")) {
             logger.error("article must start with tags:tag1,tag2,tag3...");
             return;
-        }else{
-            writeHead(lineTxt,bufferedWriter);
+        } else {
+            writeHead(lineTxt, bufferedWriter);
         }
 
-        while ((lineTxt = bufferedReader.readLine()) != null)
-        {
-            if(lineTxt.contains("![图片]")){
-                imageTransfer(lineTxt,bufferedWriter);
-            }else {
+        while ((lineTxt = bufferedReader.readLine()) != null) {
+            if (lineTxt.contains("![图片]")) {
+                imageTransfer(lineTxt, bufferedWriter);
+            } else {
                 bufferedWriter.write(lineTxt);
                 bufferedWriter.newLine();
             }
@@ -98,12 +98,12 @@ public class FileHandler {
     }
 
     private void imageTransfer(String lineTxt, BufferedWriter bufferedWriter) throws IOException {
-        String img = lineTxt.substring(lineTxt.indexOf("(")+1,lineTxt.indexOf(")"));
-        String imgCore = img.substring(img.indexOf(",")+1,img.length());
-        if(generateImage(imgCore)){
-            bufferedWriter.write("![]("+(imgNum-1)+".png)");
+        String img = lineTxt.substring(lineTxt.indexOf("(") + 1, lineTxt.indexOf(")"));
+        String imgCore = img.substring(img.indexOf(",") + 1, img.length());
+        if (generateImage(imgCore)) {
+            bufferedWriter.write("![](" + (imgNum - 1) + ".png)");
             bufferedWriter.newLine();
-        }else {
+        } else {
             logger.error("generate img failed");
             success = false;
         }
@@ -114,15 +114,15 @@ public class FileHandler {
         if (imgStr == null) {
             return false;
         }
-        BASE64Decoder decoder = new BASE64Decoder();
+        Base64.Decoder decoder = Base64.getDecoder();
         try {
-            byte[] b = decoder.decodeBuffer(imgStr);
+            byte[] b = decoder.decode(imgStr);
             for (int i = 0; i < b.length; ++i) {
                 if (b[i] < 0) {
                     b[i] += 256;
                 }
             }
-            String imgFilePath = folder.getPath()+"/"+imgNum+".png";
+            String imgFilePath = folder.getPath() + "/" + imgNum + ".png";
             OutputStream out = new FileOutputStream(imgFilePath);
             out.write(b);
             out.flush();
@@ -135,32 +135,40 @@ public class FileHandler {
     }
 
 
-    private void writeHead(String lineTxt,BufferedWriter bufferedWriter) throws IOException {
-        String[] tags = lineTxt.split(":")[1].split(",");
+    private void writeHead(String lineTxt, BufferedWriter bufferedWriter) throws IOException {
+        String[] tags;
+        if(lineTxt.contains(":")){
+            tags = lineTxt.split(":")[1].split(",");
+        }else if(lineTxt.contains("：")){
+            tags = lineTxt.split("：")[1].split(",");
+        }else {
+            logger.error("tags line is wrong, please check the article");
+            return;
+        }
         String[] categories = article.getPath().split("/");
         bufferedWriter.write("---");
         bufferedWriter.newLine();
-        bufferedWriter.write("title: "+article.getName().replace(".md",""));
+        bufferedWriter.write("title: " + article.getName().replace(".md", ""));
         bufferedWriter.newLine();
-        SimpleDateFormat formatter= new SimpleDateFormat("yyyy-MM-dd HH:mm:ss");
+        SimpleDateFormat formatter = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss");
         Date date = new Date(System.currentTimeMillis());
-        bufferedWriter.write("date: "+formatter.format(date));
+        bufferedWriter.write("date: " + formatter.format(date));
         bufferedWriter.newLine();
         bufferedWriter.write("categories:");
         bufferedWriter.newLine();
         boolean startCat = false;
-        for(int i=0;i<categories.length-1;i++){
-            if( "BakeData".equals(categories[i])){
+        for (int i = 0; i < categories.length - 1; i++) {
+            if ("BakeData".equals(categories[i])) {
                 startCat = true;
-            }else if(startCat){
-                bufferedWriter.write("- "+categories[i]);
+            } else if (startCat) {
+                bufferedWriter.write("- " + categories[i]);
                 bufferedWriter.newLine();
             }
         }
         bufferedWriter.write("tags:");
         bufferedWriter.newLine();
         for (String tag : tags) {
-            bufferedWriter.write("- " + tag);
+            bufferedWriter.write("- " + tag.trim());
             bufferedWriter.newLine();
         }
         bufferedWriter.write("---");
@@ -172,7 +180,7 @@ public class FileHandler {
     public String[] getUploadFilePaths() {
         File[] tmpList = folder.listFiles();
         String[] res = new String[tmpList.length];
-        for(int i=0; i<tmpList.length;i++){
+        for (int i = 0; i < tmpList.length; i++) {
             res[i] = tmpList[i].getAbsolutePath();
         }
         return res;
@@ -181,7 +189,7 @@ public class FileHandler {
     public String[] getUploadFileNames() {
         File[] tmpList = folder.listFiles();
         String[] res = new String[tmpList.length];
-        for(int i=0; i<tmpList.length;i++){
+        for (int i = 0; i < tmpList.length; i++) {
             res[i] = tmpList[i].getName();
         }
         return res;
